--- a/index.html
+++ b/index.html
@@ -10,3 +10,14 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script>
+    !(function () {
+        var rem;
+        rem = function() {
+            document.documentElement.style.fontSize = (document.documentElement.clientWidth || document.documentElement.clientWidth) + 'px';
+        };
+        rem();
+        window.addEventListener('resize', rem, false);
+        var _hmt = _hmt || []
+    })();
+</script>
