--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@
         var _hmt = _hmt || []
     })();
 </script>
+<script language="javascript" src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
